--- a/MvvmApp/MvvmApp/MainWindow.xaml
+++ b/MvvmApp/MvvmApp/MainWindow.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TurboAz"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="800" Width="1400"
+        WindowState="Maximized"
+        DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
     <DockPanel>
         <ContentControl Content="{Binding ActiveViewModel}"/>
     </DockPanel>
